--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h3 class="judul2 judul4">ni haoid="botol" - desmond</h3>
         </div>
 
-
+        <i class="bi bi-airplane-engines-fill"></i>
 
         <footer>
             <div class="container">
