--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="https://desraymondz.github.io/dacodaz.github.io/">BEIGETH</a>
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about-us.html">About Us</a>
@@ -72,7 +72,7 @@
         
 
 
-
+        
 
         <footer>
             <div class="container">
