--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a class="nav-link active" aria-current="page" href="#">BEIGETH</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about-us.html">About Us</a>
+                            <a class="nav-link" href="about-us.html">Our Products</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
