--- a/about-us.html
+++ b/about-us.html
@@ -80,10 +80,10 @@
                             <img class="logo" src="Logo.png"> <!-- no have -->
                         </div>
                     <div>
-                        <a href=""><i class="bi-instagram"></i></a>
-                        <a href=""><i class="bi-facebook"></i></a>
-                        <a href=""><i class="bi-youtube"></i></a>
-                        <a href=""><i class="bi-globe"></i></a>
+                        <a href=""><i class="About Us"></i></a>
+                        <a href=""><i class="Menu"></i></a>
+                        <a href=""><i class="DaCobra"></i></a>
+
                     </div>
                     <div>
                       <p >address</p>
