--- a/about-us.html
+++ b/about-us.html
@@ -74,31 +74,14 @@
 
         <footer>
             <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div>
-                            <img class="logo" src="Logo.png"> <!-- no have -->
-                        </div>
-                    <div>
-                        <a href=""><i class="About Us"></i></a>
-                        <a href=""><i class="Menu"></i></a>
-                        <a href=""><i class="DaCobra"></i></a>
 
-                    </div>
-                    <div>
-                      <p >address</p>
-                    </div>
-                </div>
-                  
                 <div class="col-md-3">
                     <h2>Dacodaz</h2>
                     <ul>
-                        <li><a href="index.html#">something</a></li>
-                        <li><a href="index.html#">something</a></li>
-                        <li><a href="index.html#">something</a></li>
-                        <li><a href="index.html#">something</a></li>
-                        <li><a href="index.html#">something</a></li>
-                        <li><a href="index.html#">something</a></li>
+                        <li><a href="index.html#">About Us</a></li>
+                        <li><a href="index.html#">Menu</a></li>
+                        <li><a href="index.html#">Beigeth</a></li>
+
                     </ul>
                 </div>
                 <div class="col-md-3">
