--- a/index.html
+++ b/index.html
@@ -62,7 +62,31 @@
         
 
 
-        
+        <!-- USP by desmond -->
+        <div class="usp-container">
+            <div class="usp-contents">
+                <div class="usp-solo usp-1">
+                    <i class="usp-icon bi bi-clock-fill"></i>
+                    <p id="no-margin">
+                        Opens 24 Hours
+                    </p>
+                </div>
+                <div class="usp-solo usp-2">
+                    <i class="usp-icon bi bi-globe-americas"></i>
+                    <p id="no-margin">
+                        World Wide Shipping
+                    </p>
+                </div>
+                <div class="usp-solo usp-3">
+                    <p id="no-margin">
+                        <span class="usp-icon material-symbols-outlined">spa</span>
+                        <div id="made-from-nature">
+                            Made from Nature
+                        </div>
+                    </p>
+                </div>
+            </div>
+        </div>
 
         <footer>
             <div class="container">
