--- a/about-us.html
+++ b/about-us.html
@@ -73,15 +73,19 @@
 
 
         <footer>
-            <div class="container">
+                <div class="footer-logo">
+                    <img src="Logo hackathon.png">
+                </div>
 
-                <div class="col-md-3">
-                    <h2>Dacodaz</h2>
-                    <ul>
-                        <li><a href="index.html#">About Us</a></li>
-                        <li><a href="index.html#">Menu</a></li>
-                        <li><a href="index.html#">Beigeth</a></li>
-
+                    <div class="footer-heading">
+                      About Us
+                    </div>
+                    <ul class="footer-subheading">
+                      <li class="list-group-item">Information</li>
+                      <li class="list-group-item">Store Locator</li>
+                      <li class="list-group-item">Careers</li>
+                    </ul>
+                  </div>
                     </ul>
                 </div>
                 <div class="col-md-3">
