--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <script src="p5.min.js"></script>
         <script src="sketch.js"></script>
         <script src="script.js"></script>
+        <!-- for google icons -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     </head>
     <style>
         /* Font Play-Fair */
