Added Our Product Page
Still on developing
-Added Navbar + Picture
-Changed New Release to Arrival

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <div>
-            <h2 class="newrelease">New Release</h2>
+            <h2 class="newrelease">New Arrival</h2>
         </div>
         
         <h3 class="judul" id="botol">Hello, world!</h3>
