--- a/about-us.html
+++ b/about-us.html
@@ -14,8 +14,8 @@
         <script src="script.js"></script>
     </head>
     <style>
-        /* Font montserrat */
-        @import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        /* Font Playfair Display */
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         @import url('page.css');
     </style>
 
@@ -62,58 +62,57 @@
         <p> sups soudojasdjasd </p>
         <img src="images/test-img.png" class="something">
         
+<!-- mines -->
 
 
+<footer>
+    <div class="footer-container">
+        <div class="footer-col footer-logo">
+            <img src="Logo hackathon.png">
+        </div>
+        <div class="footer-col">
+            <div class="footer-heading">
+                <b>About Us</b>
+            </div>
+            <ul class="footer-subheading">
+                <li class="list-group-item">Information</li>
+                <li class="list-group-item">Store Locator</li>
+                <li class="list-group-item">Careers</li>
+            </ul>
+        </div>
+        <div class="footer-col-3">
+            <div class="footer-heading">
+                <b>Menu</b>
+            </div>
+                <ul>
+                    <li><a class="btn btn-primary" href="about-us.html#" target="_blank" role="button">Click Me!</a></li>
 
 
+                </ul>
+        </div>
 
 
+        <div class="footer-col-4">
+            <div class="footer-heading">
+                <b>Our Socials</b>
+            </div>
 
 
+            <ul class="footer-subheading">
+                <li class="list-group-item"><i class="bi bi-instagram">  </i><i class="bi bi-facebook"></i>  <i class="bi bi-twitter"></i>
+                </li>
+            </ul>
+        </div>
+    </div>    
 
 
-        <footer>
-                <div class="footer-logo">
-                    <img src="Logo hackathon.png">
-                </div>
-
-                    <div class="footer-heading">
-                      About Us
-                    </div>
-                    <ul class="footer-subheading">
-                      <li class="list-group-item">Information</li>
-                      <li class="list-group-item">Store Locator</li>
-                      <li class="list-group-item">Careers</li>
-                    </ul>
-                  </div>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h2>something</h2>
-                    <ul>
-                        <li><a href="about-us.html#">something</a></li>
-                        <li><a href="about-us.html#">something</a></li>
-                        <li><a href="about-us.html">something</a></li>
-                        <li><a class="btn btn-primary" href="https://youtu.be/xvFZjo5PgG0" target="_blank" role="button">Stay In Touch!</a></li>
-                    </ul>
-                </div>
-                  
-                <div class="col-md-3">
-                    <div>
-                        <!-- something -->
-                    </div>
-                </div>
-            </div>      
-        </footer>
+    <div class="footer-text">
+        Copyright @ 2023 Beigeth. All Rights Reserved.
 
 
-
-
-
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    </body>
+    </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
 
 <!-- ❤️made with love by dacodaz 13 Nov 2023 Hackathon SIM UOL CSSC 🎓 Desmond, Alex, Vanness, Fukutaro, Cull-->
