--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <li class="nav-item">
                             <a class="nav-link fontnavbar" href="about-us.html">Our Products</a>
                         </li>
-                        <div class="rightnavbar">
+                        <div class="rightnavbar" id="berightnavbar">
                             <li class="nav-item">
                                 <a class="nav-link fontnavbar" aria-current="page">
                                     <img src="images/logotype.png">
