--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
 
         
 
+        <!-- join out membership by desmond -->
+        <div class="membership">
+            <div class="membership-arc">
+                <div class="membership-title">
+                    <div class="membership-text">
+                        Be Our member & Get 25% OFF!
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer>
             <div class="container">
                 <div class="row">
