--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container-fluid sectioncolor">
             <div>
                 <h2 class="newrelease">New Arivals</h2>
-                <div class="row spaceevenly">
+                <div class="row spaceevenly paddingbottom ">
                         <div class="card" style="width: 18rem;">
                             <img src="images/BAJU.jpeg" class="card-img-top paddingtop">
                             <div class="card-body">
@@ -111,7 +111,7 @@
         <div class="container-fluid categorycolor">
             <div>
                 <h2 class="newrelease">Category</h2>
-                <div class="row spaceevenly">
+                <div class="row spaceevenly paddingbottom">
                     <div class="card" style="width: 18rem;">
                         <img src="images/BAJU.jpeg" class="card-img-top paddingtop">
                         <div class="card-body">
