membership section sisa link

--- a/index.html
+++ b/index.html
@@ -161,7 +161,13 @@
             <div class="membership-arc">
                 <div class="membership-title">
                     <div class="membership-text">
-                        Be Our member & Get 25% OFF!
+                        Be Our Member & Get 25% OFF!
+                    </div>
+                    <div class="membership-text">
+                        <a href="#" class="btn buttoncolor">Join Us Now!
+                            <i class="bi bi-box-arrow-in-right"></i>
+                        </a>
+                        
                     </div>
                 </div>
             </div>
