--- a/Cart.html
+++ b/Cart.html
@@ -51,13 +51,22 @@
 
 
 
+    <p id="cart_title">
+        Cart
+    </p>
 
 
-    <div class="cart">
-        <div class="item">
-            <img src="images/Logo.png">
-            <p class="name">Hoodie</p>
+        <div class="pay">
+            <p>Credit Card</p>
         </div>
 
-    </div>
+        <div class="pay">
+            <p>Expiry date</p>
+        </div>
+
+        <div class="pay">
+            <p>CVC</p>
+        </div>
+
+        <a href="#" class="btn buttoncolor" id="idk">pay now</a>
 </body>
