--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </style>
 
     <body>
+
         <nav class="navbar navbar-expand-lg bg-colornavbar">
             <div class="container-fluid">
-              <!-- <a class="navbar-brand" href="#">Navbar</a> -->
                 <a class="navbar-brand" href="#">
                     <img src="images/Logo.png" width="50" height="50">
                 </a>
@@ -39,17 +39,18 @@
                         <li class="nav-item">
                             <a class="nav-link fontnavbar" href="about-us.html">Our Products</a>
                         </li>
-                        <div class="rightnavbar" id="berightnavbar">
+                        <!-- <div class="rightnavbar" id="berightnavbar">
                             <li class="nav-item">
                                 <a class="nav-link fontnavbar" aria-current="page">
                                     <img src="images/logotype.png">
                                 </a>
                             </li>
-                        </div>
+                        </div> -->
                     </ul>
-              </div>
+                </div>
             </div>
         </nav>
+
         <div>
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
