--- a/index.html
+++ b/index.html
@@ -22,32 +22,25 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-colornavbar">
             <div class="container-fluid">
-              <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-                <a class="navbar-brand" href="#">
+            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+                <a class="navbar-brand" href="index.html">
                     <img src="images/Logo.png" width="50" height="50">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 navflex">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active fontnavbar ml" aria-current="page" href="#">
-                                Home
+                                <img src="images/logotype.png" width="100">
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link fontnavbar " href="our-product.html">Our Products</a>
+                        <li class="nav-item mlpt">
+                            <a class="nav-link fontnavbar" href="our-product.html">Our Products</a>
                         </li>
-                        <div class="navbarleft" >
-                            <li class="nav-item">
-                                <a class="nav-link fontnavbar" aria-current="page">
-                                    <img src="images/logotype.png">
-                                </a>
-                            </li>
-                        </div>
                     </ul>
-              </div>
+                </div>
             </div>
         </nav>
         <div>
